--- a/gb/16/8/27/n8241603.md
+++ b/gb/16/8/27/n8241603.md
@@ -1,15 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/okxz2368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/okxz2368/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/okxz2368/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/okxz2368/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中国建筑商洛市狂盖楼 引地产忧虑</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2016/08/GettyImages-532007938-e1472267734499-600x377.jpg" />
-<h6>中国泛海股控在洛杉矶Staple中心对面的开发项目。(Getty Images)
-</h6>
+
+<h6></h6>
 <hr>
-	<p>【大纪元2016年08月27日讯】（大纪元记者张纯之编译报导）<ahref="https://github.com/okxz2368/djy/blob/master/gb/tag/%E6%B4%9B%E6%9D%89%E7%9F%B6.md#1">洛杉矶</a><ahref="https://github.com/okxz2368/djy/blob/master/gb/tag/%E6%88%BF%E5%9C%B0%E4%BA%A7.md#1">房地产</a>长期以来吸引外国投资，来自日本、加拿大和韩国的资金源源流入这里。但是，从没人像中国人那样造房子。</p>
-<p>据《<ahref="https://github.com/okxz2368/djy/blob/master/gb/tag/%E6%B4%9B%E6%9D%89%E7%9F%B6.md#1">洛杉矶</a>时报》报导，目前，绿地 (Greenland)、泛海 (Oceanwide) 和深圳合正 (Shenzhen Hazens) 等中国开发商正投入数十亿美元在洛杉矶建摩天大楼，虽然可以为当地增加数千新居，但也将彻底改变洛杉矶的城市轮廓。</p>
+	<p>【大纪元2016年08月27日讯】（大纪元记者张纯之编译报导）<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B4%9B%E6%9D%89%E7%9F%B6.md#1">洛杉矶</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%88%BF%E5%9C%B0%E4%BA%A7.md#1">房地产</a>长期以来吸引外国投资，来自日本、加拿大和韩国的资金源源流入这里。但是，从没人像中国人那样造房子。</p>
+<p>据《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B4%9B%E6%9D%89%E7%9F%B6.md#1">洛杉矶</a>时报》报导，目前，绿地 (Greenland)、泛海 (Oceanwide) 和深圳合正 (Shenzhen Hazens) 等中国开发商正投入数十亿美元在洛杉矶建摩天大楼，虽然可以为当地增加数千新居，但也将彻底改变洛杉矶的城市轮廓。</p>
 <h3>中国建筑商涌入 盼吸引中国买家</h3>
-<p>据<ahref="https://github.com/okxz2368/djy/blob/master/gb/tag/%E6%88%BF%E5%9C%B0%E4%BA%A7.md#1">房地产</a>公司Transwestern的数据，2014年以来，在洛杉矶市中心超过1,900万美元的18块土地交易中，与中国开发商有关的就有7块。Colliers International洛杉矶地区副总裁塔津斯基 (Mark Tarczynski) 说，等这些巨型大楼完工后，可能就要重拍洛市中心的明信片了。</p>
+<p>据<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%88%BF%E5%9C%B0%E4%BA%A7.md#1">房地产</a>公司Transwestern的数据，2014年以来，在洛杉矶市中心超过1,900万美元的18块土地交易中，与中国开发商有关的就有7块。Colliers International洛杉矶地区副总裁塔津斯基 (Mark Tarczynski) 说，等这些巨型大楼完工后，可能就要重拍洛市中心的明信片了。</p>
 <p>预计市中心这些新开发住房的买家中，有相当比例会来自中国。在那里，许多中上阶层人士希望拥有外国房地产，增加其财富的安全性和多元化。这种趋势在中国经济放缓之后变得更为明显。这轮建筑热潮也凸显两国建筑业的差异。如果美国想持续吸引中资，就不得不适应这种风格。</p>
 <p>西8街 (W. 8th Street) 和海港高速 (Harbor Freeway) 交汇处一块6英亩土地一直闲置，本来有计划要将其建成一个停车场，但最终由于经济低迷而流产。然而到了2014年，上海绿地出资1.5亿美元收购了这块地，宣布要在该处建一个“城中之城”，包括约7万平方英尺的零售空间、一幢18层的精品酒店、三幢公寓大楼 (1,500个单元房)，有些单元还可以看到海景。预计每套房价格最低50万美元，最贵可达690万美元。</p>
 <p>这个总价值10亿美元的工程计划于2018年完工，将动用30万吨水泥、65万平方英尺玻璃，大部分建筑都使用了绿地的标志颜色——绿色。</p>
@@ -18,14 +17,14 @@
 <p>在斯泰普中心对面，深圳合正打算将Luxe City Center Hotel酒店夷为平地，建两个公寓楼和一个酒店。合正集团为收购这块2.5英亩的土地支付了1.04亿美元，约925美元一平方英尺的价格创下洛杉矶地区2014年以来购买大块土地的最高价格。近两年来，紧随其后的其它三个最高单价也由中国买家创下。洛市中心最贵的四个地产交易中，三个是绿地、泛海和深圳合正的开发项目。</p>
 <p>其它较小的中国开发项目还包括一幢位于第4街和百老汇 (Broadway) 的35层塔楼、位于南希望街 (S. Hope Street) 1133街区的一幢28层公寓大楼、位于南格兰大街 (S. Grand Avenue) 1201街区两幢37层和22层的公寓等。同时，重庆力帆集团也出资1,900万美元购买了西7街 (West 7th Street) 和威特米街 (Witmer Street) 交汇处一个前工会大厅地块，在这里，又一幢高耸的公寓将拔起而起。</p>
 <h3>中国建筑商会留下空楼吗﹖</h3>
-<p>在经过一轮房地产价格飙升之后，<ahref="https://github.com/okxz2368/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E6%88%BF%E5%9C%B0%E4%BA%A7%E5%B8%82%E5%9C%BA.md#1">中国房地产市场</a>已经沉寂下来。财大气粗的投资者已开始放眼外国房地产市场，而中国开发商也紧随其后，来到海外市场建房。比如绿地已在多个国家和地区开发了房地产项目。</p>
+<p>在经过一轮房地产价格飙升之后，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E6%88%BF%E5%9C%B0%E4%BA%A7%E5%B8%82%E5%9C%BA.md#1">中国房地产市场</a>已经沉寂下来。财大气粗的投资者已开始放眼外国房地产市场，而中国开发商也紧随其后，来到海外市场建房。比如绿地已在多个国家和地区开发了房地产项目。</p>
 <p>但是，这种对中国买家的依赖可能很容易成为一种风险。一些洛杉矶市中心居民已经担心，中国投资者会留下无人居住的大楼，这种现象在中国很普遍。</p>
 <p>一些洛杉矶的中国开发商希望中国买家能购买其40%的房子。但是，由于中国国内外汇储备剧减，现在将资金转出中国已经变得越来越困难。这直接导致美国今年的中国买家减少，这是自2011年来第一次。</p>
 <p>洛杉矶的中国公司也可能要依靠更多中国买家。如果这样，他们将不得不希望市中心的建筑剧增不会导致公寓和康斗过量。</p>
 <p>目前洛市中心所有开发商 (不仅是中国开发商) 在建项目可提供6,260套住房。如果完工，洛杉矶地区住房数量将增加15%，达到4万套。此外，还有数千套房的开发正在计划中。</p>
 <p>风险使得某些大型中国开发商，比如金地集团 (Gemdale) 放弃了市中心开发，转而开发好莱坞。金地美国区总经理杰森?朱 (Jason Zhu) 说：“根据在中国的经验，当太多房屋供应集中在同一地带时，就应当停止在那里投资。”他还说，金地在转移开发目标前已经研究了美国房地产多年。</p>
-<h3>申请<ahref="https://github.com/okxz2368/djy/blob/master/gb/tag/%E5%BB%BA%E7%AD%91%E8%AE%B8%E5%8F%AF.md#1">建筑许可</a>还需学习</h3>
-<p>但对大部分开发商来说，这是个学习过程。特别是申请<ahref="https://github.com/okxz2368/djy/blob/master/gb/tag/%E5%BB%BA%E7%AD%91%E8%AE%B8%E5%8F%AF.md#1">建筑许可</a>。</p>
+<h3>申请<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BB%BA%E7%AD%91%E8%AE%B8%E5%8F%AF.md#1">建筑许可</a>还需学习</h3>
+<p>但对大部分开发商来说，这是个学习过程。特别是申请<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BB%BA%E7%AD%91%E8%AE%B8%E5%8F%AF.md#1">建筑许可</a>。</p>
 <p>在中国，由于没有真正的房产税，所以地区政府依靠土地销售维持25%的财政，这造成各地都积极开发房地产，这也就是为什么中国19天可以建一幢57层大楼的原因。</p>
 <p>不过，深圳合正在洛杉矶碰到的情况不一样。该公司在购买了斯泰普中心对面土地之后两年还没有动工，因为该公司还在申请建筑许可。</p>
 <p>洛杉矶负责经济开发的副市长、洛杉矶建筑安全部负责人陈楚侨 (Raymond Chan) 说，洛市规划者一直在指导和帮助开发商达到洛市的各种要求。深圳合正希望明年初能获得建设许可。</p>
@@ -36,36 +35,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/15/1/3/n4332820.md#1">中国开发商佳兆业违约4亿港元债务</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/15/4/3/n4403327.md#1">中国开发商45百万买滨城房产  建477套公寓房</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/15/7/8/n4476055.md#1">中国开发商买下悉尼奥林匹克公园两块地</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/15/10/14/n4550135.md#1">中国开发商利用规划法绕过市府反对 市府无奈</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/1/3/n4332820.md#1">中国开发商佳兆业违约4亿港元债务</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/4/3/n4403327.md#1">中国开发商45百万买滨城房产  建477套公寓房</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/8/n4476055.md#1">中国开发商买下悉尼奥林匹克公园两块地</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/10/14/n4550135.md#1">中国开发商利用规划法绕过市府反对 市府无奈</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/31/n10267172.md#1" target="_blank">许茹：迫害宗教或终止迫害 罗马皇帝不同命</a></li><li><a href="https://github.com/okxz2368/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/27/n11281560.md#1" target="_blank">加拿大魁北克庆法轮大法日 市长议员祝贺</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/4/n11701121.md#1" target="_blank">宁静：中共改编《天仙配》摧毁孝道败坏人伦</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/20/n10923009.md#1" target="_blank">从长春到韩国 80后美女的戏剧人生（3）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/1/n12075692.md#1">脱北韩国议员：99%确定金正恩上周已死</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/2/n12076958.md#1">【拍案惊奇】朝媒报金正恩现身 习家邓家对呛？</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/1/n12076815.md#1">【新闻看点】美连6大动作 美中角力升级</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/1/n12076209.md#1">不小心？赵立坚转推中共瞒疫实情</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/1/n12076867.md#1">朝媒报金正恩现身竣工典礼 川普拒置评</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/30/n12073796.md#1">否认与刘亦菲复合 宋承宪：手滑导致按赞帖文</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/1/n12075345.md#1">流浪猫妈妈带小猫上医院获得帮助 网友赞爆</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/2/n12078172.md#1">范冰冰被堵绝财路？传遭广电总局禁直播卖货</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/30/n12074176.md#1">台湾歌手大支再推新歌 呼吁向中共追责</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/1/n12076299.md#1">“流行天后”麦当娜自曝检测出中共病毒抗体</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/2/25/n11893623.md#1">【命理】他为何由相信命运变成不相信命运？</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/29/n12070494.md#1">玄武大帝除疫禳灾 人间留神迹</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/30/n12073552.md#1">一生波折难掩其风华 东汉才女蔡文姬</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/29/n12070777.md#1">专管掠走命外之财的冥府武官</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/30/n12073149.md#1">“留白”的艺术与人生</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/okxz2368/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/okxz2368/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/8/27/n8241603.htm">中国建筑商洛市狂盖楼 引地产忧虑</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/8/27/n8241603.htm">中国建筑商洛市狂盖楼 引地产忧虑</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/okxz2368/djy/blob/master/gb/16/8/27/n8241603.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/okxz2368/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/okxz2368/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/okxz2368/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/16/8/27/n8241603.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
